--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 appnope==0.1.0
 backcall==0.1.0
+beautifulsoup4==4.7.1
 bleach==3.1.0
+boto==2.49.0
+boto3==1.9.86
+botocore==1.12.86
+bs4==0.0.1
+bz2file==0.98
 certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.2
 defusedxml==0.5.0
+docutils==0.14
 entrypoints==0.3
+gensim==3.7.1
 idna==2.8
 ipykernel==5.1.0
 ipython==7.2.0
@@ -14,6 +22,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.2
 Jinja2==2.10
+jmespath==0.9.3
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -44,10 +53,14 @@ pytz==2018.9
 pyzmq==17.1.2
 qtconsole==4.4.3
 requests==2.21.0
+s3transfer==0.1.13
 scikit-learn==0.19.1
 scipy==1.1.0
+seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.12.0
+smart-open==1.8.0
+soupsieve==1.7.3
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
