--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+attrs==19.1.0
 backcall==0.1.0
 beautifulsoup4==4.7.1
 bleach==3.1.0
@@ -10,47 +11,48 @@ bz2file==0.98
 certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
-decorator==4.3.2
+decorator==4.4.0
 defusedxml==0.5.0
 docutils==0.14
 entrypoints==0.3
 gensim==3.7.1
 idna==2.8
 ipykernel==5.1.0
-ipython==7.2.0
+ipython==7.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
-jedi==0.13.2
+jedi==0.13.3
 Jinja2==2.10
 jmespath==0.9.3
-jsonschema==2.6.0
+jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
-MarkupSafe==1.1.0
+MarkupSafe==1.1.1
 matplotlib==2.2.2
 mistune==0.8.4
-nbconvert==5.4.0
+nbconvert==5.4.1
 nbformat==4.4.0
 nltk==3.3
-notebook==5.7.4
+notebook==5.7.8
 numpy==1.14.5
 pandas==0.23.1
 pandocfilters==1.4.2
-parso==0.3.2
+parso==0.3.4
 pexpect==4.6.0
 pickleshare==0.7.5
-prometheus-client==0.5.0
-prompt-toolkit==2.0.8
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 Pygments==2.3.1
 pyparsing==2.3.1
-python-dateutil==2.7.5
+pyrsistent==0.14.11
+python-dateutil==2.8.0
 python-dotenv==0.10.1
 pytz==2018.9
-pyzmq==17.1.2
+pyzmq==18.0.1
 qtconsole==4.4.3
 requests==2.21.0
 s3transfer==0.1.13
@@ -61,9 +63,9 @@ Send2Trash==1.5.0
 six==1.12.0
 smart-open==1.8.0
 soupsieve==1.7.3
-terminado==0.8.1
+terminado==0.8.2
 testpath==0.4.2
-tornado==5.1.1
+tornado==6.0.2
 traitlets==4.3.2
 urllib3==1.24.1
 wcwidth==0.1.7
